+ Сделал заполненную комнату не доступной для входа + Настроил видимость кнопки начала игры * Удалил не нужные параметры методов в сервисах + Создал метод GetInfo и DTO + Добавил поле вывода хода игрока - Удалил не нужные DTO и валидаторы + Добавил Id в currentRoom
