# Game.WebApi/Controllers/UsersController.cs
@@ -1,6 +1,4 @@
-﻿using AutoMapper;
-using GameApp.Domain;
-using GameApp.WebApi.Hubs;
+﻿using GameApp.WebApi.Hubs;
 using GameApp.WebApi.Services.Rooms;
 using GameApp.WebApi.Services.Users;
 using GameApp.WebApi.Services.Users.Dto;
@@ -10,32 +8,32 @@ using Microsoft.AspNetCore.SignalR;
 
 namespace GameApp.WebApi.Controllers
 {
-    [Authorize]
-    public class UsersController : GameAppController
-    {
-        private readonly IUserService _userService;
-        private readonly IRoomService _roomService;
-        private readonly IHubContext<GameHub> _gameHub;
+	[Authorize]
+	public class UsersController : GameAppController
+	{
+		private readonly IUserService _userService;
+		private readonly IRoomService _roomService;
+		private readonly IHubContext<GameHub> _gameHub;
 
-        public UsersController(GameContext context, IMapper mapper, IUserService userService, IHubContext<GameHub> hubContext, IRoomService roomService) : base(context, mapper)
-        {
-            _userService = userService;
-            _gameHub = hubContext;
-            _roomService = roomService;
-        }
+		public UsersController(IUserService userService, IHubContext<GameHub> hubContext, IRoomService roomService)
+		{
+			_userService = userService;
+			_gameHub = hubContext;
+			_roomService = roomService;
+		}
 
-        [HttpGet("[action]")]
+		[HttpGet("[action]")]
 		[ProducesResponseType(typeof(UserShortDto), StatusCodes.Status200OK)]
 		public async Task<IActionResult> GetAvatarAsync()
 		{
 			try
 			{
 				var avatar = await _userService.GetAvatarAsync(CurrentUserLogin!);
-                return Ok(new UserShortDto
-                {
-                    Login = CurrentUserLogin!,
-                    Avatar = avatar
-                });
+				return Ok(new UserShortDto
+				{
+					Login = CurrentUserLogin!,
+					Avatar = avatar
+				});
 			}
 			catch (Exception ex)
 			{
@@ -43,36 +41,36 @@ namespace GameApp.WebApi.Controllers
 			}
 		}
 
-        [HttpGet("[action]")]
-        [ProducesResponseType(typeof(IEnumerable<UserDto>), StatusCodes.Status200OK)]
-        public async Task<IActionResult> GetAll(string? searchString = null)
-        {
-            return Ok(await _userService.GetAll(searchString));
-        }
+		[HttpGet("[action]")]
+		[ProducesResponseType(typeof(IEnumerable<UserDto>), StatusCodes.Status200OK)]
+		public async Task<IActionResult> GetAll(string? searchString = null)
+		{
+			return Ok(await _userService.GetAll(searchString));
+		}
 
-        [HttpPost("[action]")]
-        [ProducesResponseType(typeof(bool), StatusCodes.Status200OK)]
-        public async Task<IActionResult> ChangeReady()
-        {
-            try
-            {
+		[HttpPost("[action]")]
+		[ProducesResponseType(typeof(bool), StatusCodes.Status200OK)]
+		public async Task<IActionResult> ChangeReady()
+		{
+			try
+			{
 				var userId = await _userService.GetId(User.Identity!.Name!);
-                var isReady = await _userService.ChangeReady(userId);
-                var currentRoom = await _roomService.GetCurrentRoom(userId);
+				var isReady = await _userService.ChangeReady(userId);
+				var currentRoom = await _roomService.GetCurrentRoom(userId);
 
-                if (currentRoom.Opponent is not null)
-                {
-                    await _gameHub.Clients
-                        .Client(GameHub._connectionUsers[currentRoom.Opponent.Login])
-                        .SendAsync("ChangeReady", isReady);
-                }
+				if (currentRoom.Opponent is not null)
+				{
+					await _gameHub.Clients
+						.Client(GameHub._connectionUsers[currentRoom.Opponent.Login])
+						.SendAsync("ChangeReady", isReady);
+				}
 
 				return Ok(isReady);
-            }
-            catch (Exception ex)
-            {
-                return BadRequest(ex.Message);
-            }
-        }
-    }
+			}
+			catch (Exception ex)
+			{
+				return BadRequest(ex.Message);
+			}
+		}
+	}
 }
